Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.0
-
None
Description
QTransform::transposed() creates a transposed matrix, but doesn't set the dirty flag.
Because of this, a subsequent call to type() returns the type of the original transformation, which will mostly be wrong:
QTransform t; t.translate(5, -5); // t.type() == TxTranslate QTransform tt = t.transposed(); Q_ASSERT(tt.type() == QTransform::TxProject); // fails
In transposing, dx := m31 will be swapped with m13 (and dy := m32 with m23): The transposed form of a translating QTransform will be a projection.
Attachments
For Gerrit Dashboard: QTBUG-68630 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
231473,2 | Fix QTransform::transposed() result having wrong transformation type | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |